Closed
Bug 474259
Opened 17 years ago
Closed 17 years ago
Outgoing email addresses get collected even if in OSX address book
Categories
(MailNews Core :: Address Book, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b2
People
(Reporter: mitra_lists, Assigned: standard8)
Details
Attachments
(1 file)
|
2.40 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-GB; rv:1.9.0.5) Gecko/2008120121 Firefox/3.0.5
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b3pre) Gecko/20090118 Shredder/3.0b2pre
If you type the name of someone already in an address book (mine were in OSX book, but I suspect works on any)
Reproducible: Always
Steps to Reproduce:
1.Create an address book entry (in OSX address book) foo@bar.com
2.Create an address book entry fuz@bar.com in an address book (NOT Personal Address Book, or wherever collected addresses are put)
3.Send an email to foo@bar.com and fuz@bar.com
Actual Results:
foo@bar.com will be collected into Personal Addresses
fuz@bar.com won't
Expected Results:
Neither should be collected
I think this is imported, because it renders collected addresses unusable as it will be full of addresses that duplicate the OSX addresses. In addition if OSX addresses are edited, the collected ones will still have the wrong info in them.
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → bugzilla
Product: Thunderbird → MailNews Core
QA Contact: address-book → address-book
Hardware: x86 → All
Target Milestone: --- → Thunderbird 3.0b2
Version: unspecified → Trunk
| Assignee | ||
Updated•17 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 1•17 years ago
|
||
I'd actually forgotten about this after we reworked address collection to not collect emails if they were in other address books.
Thankfully the fix is simple - define the GetCardFromProperty function for the OS X address book as well.
Attachment #358729 -
Flags: superreview?(bienvenu)
Attachment #358729 -
Flags: review?(bienvenu)
Updated•17 years ago
|
Attachment #358729 -
Flags: superreview?(bienvenu)
Attachment #358729 -
Flags: superreview+
Attachment #358729 -
Flags: review?(bienvenu)
Attachment #358729 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Summary: Outgoing mail gets collected even if in OSX address book → Outgoing email address gets collected even if in OSX address book
| Assignee | ||
Comment 2•17 years ago
|
||
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Summary: Outgoing email address gets collected even if in OSX address book → Outgoing email addresses get collected even if in OSX address book
You need to log in
before you can comment on or make changes to this bug.
Description
•