Bug 474259 Outgoing email addresses get collected even if in OSX address book. r/sr=bienvenu