mailnews/addrbook/src/nsAbOSXDirectory.mm
@@ -841,6 +841,54 @@ nsAbOSXDirectory::GetChildCards(nsISimpleEnumerator **aCards)
 }
 
 NS_IMETHODIMP
+nsAbOSXDirectory::GetCardFromProperty(const char *aProperty,
+                                      const nsACString &aValue,
+                                      PRBool aCaseSensitive,
+                                      nsIAbCard **aResult)
+{
+  NS_ENSURE_ARG_POINTER(aResult);
+
+  *aResult = nsnull;
+
+  if (aValue.IsEmpty())
+    return NS_OK;
+
+  nsIMutableArray *list = m_IsMailList ? m_AddressList : mCardList;
+
+  if (!list)
+    return NS_OK;
+
+  PRUint32 length;
+  nsresult rv = list->GetLength(&length);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  nsCOMPtr<nsIAbCard> card;
+  nsCAutoString cardValue;
+
+  for (PRUint32 i = 0; i < length && !*aResult; ++i)
+  {
+    card = do_QueryElementAt(list, i, &rv);
+    if (NS_SUCCEEDED(rv))
+    {
+      rv = card->GetPropertyAsAUTF8String(aProperty, cardValue);
+      if (NS_SUCCEEDED(rv))
+      {
+#ifdef MOZILLA_INTERNAL_API
+        PRBool equal = aCaseSensitive ? cardValue.Equals(aValue) :
+          cardValue.Equals(aValue, nsCaseInsensitiveCStringComparator());
+#else
+        PRBool equal = aCaseSensitive ? cardValue.Equals(aValue) :
+          cardValue.Equals(aValue, CaseInsensitiveCompare);
+#endif
+        if (equal)
+          NS_IF_ADDREF(*aResult = card);
+      }
+    }
+  }
+  return NS_OK;
+}
+
+NS_IMETHODIMP
 nsAbOSXDirectory::CardForEmailAddress(const nsACString &aEmailAddress,
                                       nsIAbCard **aResult)
 {
